feat: add HttpOnly cookies and fix transaction integrity

--- a/.env.example
+++ b/.env.example
@@ -36,15 +36,18 @@ MAIL_FROM=noreply@nestauth.local
 # MAIL_PASS=app_password
 # MAIL_FROM=noreply@tudominio.com
 
-# FRONTEND
+# Cliente / CORS
 FRONTEND_URL=http://localhost:5173
+FRONTEND_CORS=http://localhost:5173
+
+# COOKIES
+COOKIE_SAMESITE=lax
+COOKIE_ACCESS_MAX_AGE=3600000
+COOKIE_REFRESH_MAX_AGE=604800000
 
 # THROTTLE
 THROTTLE_TTL=60000
 THROTTLE_LIMIT=10
-
-# CORS
-FRONTEND_CORS=http://localhost:5173
 
 # LOGGER
 LOG_CONSOLE=true
